--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <img src="images/logo.png" alt="Kiwanis Logo" class="logo"/>
+    <img src="images/Kiwanis Logo.png" alt="Kiwanis Logo" class="logo"/>
     <h1>Kiwanis Club of Geyserville</h1>
     <nav>
       <ul>
